--- a/SharedKernel.Tests/SharedKernel.Tests.csproj
+++ b/SharedKernel.Tests/SharedKernel.Tests.csproj
@@ -8,15 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="Moq" Version="4.14.5" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VendaDDD.Domain\VendaDDD.Domain.csproj" />
-    <ProjectReference Include="..\VendaDDD.Shared\VendaDDD.Shared.csproj" />
+    <ProjectReference Include="..\VendaDDD.Shared\SharedKernel.csproj" />
   </ItemGroup>
 
 </Project>
