--- a/VendaDDD.Domain/VendaBC.Domain.csproj
+++ b/VendaDDD.Domain/VendaBC.Domain.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\VendaDDD.Shared\SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Validations\Entities\" />
+  </ItemGroup>
+
 </Project>
