add unit of work add webapi

--- a/SegurancaBC.Infrastructure/SegurancaBC.Infrastructure.csproj
+++ b/SegurancaBC.Infrastructure/SegurancaBC.Infrastructure.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SegurancaBC.Domain\SegurancaBC.Domain.csproj" />
+    <ProjectReference Include="..\VendaDDD.Shared\SharedKernel.csproj" />
   </ItemGroup>
 
 </Project>
