--- a/SegurancaBC.Infrastructure/SegurancaBC.Infrastructure.csproj
+++ b/SegurancaBC.Infrastructure/SegurancaBC.Infrastructure.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="3.1.7" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
