--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -4,5 +4,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SegurancaBC.Domain\SegurancaBC.Domain.csproj" />
+    <ProjectReference Include="..\SegurancaBC.Infrastructure\SegurancaBC.Infrastructure.csproj" />
+    <ProjectReference Include="..\VendaDDD.Shared\SharedKernel.csproj" />
+  </ItemGroup>
+
 
 </Project>
