--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": ""
+    "DefaultConnection": "Server=.\\SQLExpress;Database=venda-ddd;User Id=sa;Password=123123;MultipleActiveResultSets=true;"
   },
   "AllowedHosts": "*"
 }
