promovendo Infrasctructure não podemos ter uma infra para cada BC, está muito distante da realidade

--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\SegurancaBC.Domain\SegurancaBC.Domain.csproj" />
-    <ProjectReference Include="..\SegurancaBC.Infrastructure\SegurancaBC.Infrastructure.csproj" />
     <ProjectReference Include="..\VendaDDD.Shared\SharedKernel.csproj" />
   </ItemGroup>
 
