--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -5,9 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="8.1.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\SegurancaBC.Domain\SegurancaBC.Domain.csproj" />
     <ProjectReference Include="..\VendaDDD.Shared\SharedKernel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Handlers\Usuario\Commands\" />
   </ItemGroup>
 
 
