gerando token na infrastructure

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLExpress;Database=venda-ddd;User Id=sa;Password=123123;MultipleActiveResultSets=true;"
   },
+  "Token": {
+    "Secret":  "XARUMAN_sopapos@s&lect991#RONALDO_opirjs89ou89Y1yd!y"
+  },
   "AllowedHosts": "*"
 }
